Added profile photos and icons to profile and connect page. Also fixed an issue with changedetection=onpush that caused new data to not display on connect page.

--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
             ],
             "styles": [
               "projects/angular-ngrx-material-starter/src/styles-app-loading.scss",
-              "projects/angular-ngrx-material-starter/src/styles.scss"
+              "projects/angular-ngrx-material-starter/src/styles.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           },
@@ -110,7 +111,8 @@
             ],
             "styles": [
               "projects/angular-ngrx-material-starter/src/styles-app-loading.scss",
-              "projects/angular-ngrx-material-starter/src/styles.scss"
+              "projects/angular-ngrx-material-starter/src/styles.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           },
