--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@angular/compiler": "~9.1.0",
     "@angular/core": "~9.1.0",
     "@angular/forms": "~9.1.0",
+    "@angular/localize": "~9.1.0",
     "@angular/material": "~9.1.0",
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
@@ -52,6 +53,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-brands-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@ngrx/effects": "~9.1.0",
     "@ngrx/entity": "~9.1.0",
     "@ngrx/router-store": "~9.1.0",
