--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@ngx-translate/core": "^12.0.0",
     "@ngx-translate/http-loader": "^4.0.0",
     "bootstrap": "^4.4.1",
+    "@tinymce/tinymce-angular": "^3.5.0",
     "browser-detect": "^0.2.28",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
